Login aside was created

--- a/src/app/ui/_styles/index.scss
+++ b/src/app/ui/_styles/index.scss
@@ -2,5 +2,5 @@
 @forward './colors' as color-*;
 @forward './fonts' as font-*;
 @forward './break-points' as bkp-*;
-@forward './box-models' as box-*;
+@forward './box-model' as box-*;
 @forward './columns' as columns-*;
