--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -16,6 +16,10 @@ $pad-base: $_pad-base;
 $pad-onehalf: $_pad-base * 1.5;
 $pad-double: $_pad-base * 2;
 
+$wth-block: 100%;
+
+$hht-block: 100%;
+
 $bor-solid: $_pad-base * 0.0625 solid;
 
 $rad-none: 0;
