--- a/src/app/ui/layouts/layout-login/layout-login.component.html
+++ b/src/app/ui/layouts/layout-login/layout-login.component.html
@@ -1,3 +1,8 @@
-<section>
-  <router-outlet></router-outlet>
+<section class="layout-login">
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+  <section>
+    <router-outlet name="form"></router-outlet>
+  </section>
 </section>
