Login form was finished

--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -23,6 +23,7 @@ $hht-block: 100%;
 $bor-solid: $_pad-base * 0.0625 solid;
 
 $rad-none: 0;
+$rad-small: $_pad-base * 0.25;
 $rad-medium: $_pad-base * 0.5;
 $rad-large: $_pad-base;
 $rad-rounded: $_pad-base * 100;
