--- a/src/app/ui/_styles/index.scss
+++ b/src/app/ui/_styles/index.scss
@@ -4,3 +4,5 @@
 @forward './break-points' as bkp-*;
 @forward './box-model' as box-*;
 @forward './columns' as columns-*;
+@forward './forms' as form-*;
+@forward './animations' as animation-*;
