--- a/src/app/ui/elements/text/text.component.scss
+++ b/src/app/ui/elements/text/text.component.scss
@@ -32,6 +32,10 @@
     @include styles.font-small;
   }
 
+  &--micro {
+    @include styles.font-micro;
+  }
+
   &--medium {
     @include styles.font-medium;
   }
