--- a/src/app/ui/layouts/layout-login/layout-login.component.html
+++ b/src/app/ui/layouts/layout-login/layout-login.component.html
@@ -2,7 +2,7 @@
   <section>
     <router-outlet></router-outlet>
   </section>
-  <section>
+  <section class="layout-login__form">
     <router-outlet name="form"></router-outlet>
   </section>
 </section>
