--- a/src/app/ui/elements/button/button.component.scss
+++ b/src/app/ui/elements/button/button.component.scss
@@ -19,6 +19,7 @@
 
   &:hover {
     background-color: styles.$color-primary-color;
+    border: styles.$box-bor-solid styles.$color-bg-white;
   }
 
   &--disabled {
