--- a/src/app/ui/forms/sub-form-input/sub-form-input.component.html
+++ b/src/app/ui/forms/sub-form-input/sub-form-input.component.html
@@ -7,7 +7,7 @@
     <div class="sub-form-input__text">
       <mr-text
         [type]="'line'"
-        [size]="'small'"
+        [size]="'base'"
         [weight]="'bold'"
         [text]="label"
       ></mr-text>
