--- a/src/app/ui/forms/form-user-login/form-user-login.component.html
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.html
@@ -1,3 +1,11 @@
+<mr-text
+  class="form-user-login__text"
+  [type]="'paragraph'"
+  [size]="'medium'"
+  [weight]="'bold'"
+  [text]="'¡Bienvenida a la comunidad de Mujeres ROFÉ, un espacio de crecimiento y transformación!'"
+></mr-text>
+
 <form class="form-user-login" [formGroup]="form.formGroup">
   <fieldset class="form-user-login__section">
     <mr-sub-form-input 
