Login validations were added

--- a/src/app/shared/shell/user-login-form-container/user-login-container-form.component.html
+++ b/src/app/shared/shell/user-login-form-container/user-login-container-form.component.html
@@ -1,3 +1,8 @@
-<mr-form-user-login
-  (dataOutput)="handleLogin($event)"
-></mr-form-user-login>
+<ng-container *ngIf="{
+  currentUser: (currentUser$ | async)
+} as data">
+  <mr-form-user-login
+    [currentUser]="data.currentUser ?? undefined"
+    (dataOutput)="handleLogin($event)"
+  ></mr-form-user-login>
+</ng-container>
