Home was initialized

--- a/src/app/ui/layouts/layout-main/layout-main.component.html
+++ b/src/app/ui/layouts/layout-main/layout-main.component.html
@@ -1,1 +1,8 @@
-<p>layout-main works!</p>
+<section class="layout-main">
+  <section>
+    <router-outlet name="header"></router-outlet>
+  </section>
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+</section>
