--- a/src/app/ui/_styles/_animations.scss
+++ b/src/app/ui/_styles/_animations.scss
@@ -1,3 +1,16 @@
 $bezier: all 0.15s cubic-bezier(0.17, 0.67, 0.8, 0.62);
 $ease: all .25s ease 0s;
-$jumping: 1.25s ease-in-out 0s infinite normal none running jumping;
+
+@mixin scale-up-top {
+  animation: scale-up-top 0.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@keyframes scale-up-top {
+  0% {
+    transform: scaleX(0.5);
+    transform-origin: 0% 0%;
+  }
+  100% {
+    transform: scaleX(1);
+    transform-origin: 0% 0%;
+  }
+}
