--- a/src/app/ui/elements/login-aside/login-aside.component.html
+++ b/src/app/ui/elements/login-aside/login-aside.component.html
@@ -2,7 +2,7 @@
 
 <div class="login-aside__image">
   <figure class="login-aside__logo">
-    <mr-image [alt]="'mujeres'" [image]="'assets/img/logo.png'"></mr-image>
+    <mr-image [alt]="'mujeres'" [image]="'assets/img/logo-2.png'"></mr-image>
   </figure>
   <figure class="login-aside__mujeres">
     <mr-image [alt]="'mujeres'" [image]="'assets/img/mujeres.png'"></mr-image>
