--- a/src/app/ui/blocks/aside-menu/aside-menu.component.html
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.html
@@ -12,6 +12,9 @@
         [item]="item"
       ></mr-item-menu>
     </div>
-    <mr-current-user></mr-current-user>
+    <mr-current-user
+      [currentUser]="currentUser"
+      (clickedLogout)="handleLogout()"
+    ></mr-current-user>
   </div>
 </div>
