Component modal was created

--- a/src/app/ui/_styles/_colors.scss
+++ b/src/app/ui/_styles/_colors.scss
@@ -46,3 +46,5 @@ $bor-light: $_neutral-10;
 $typo-base: $_neutral-40;
 $typo-light: $_neutral-30;
 $typo-contrast: $_neutral-0;
+
+$opacity-dark: rgba($_neutral-40, 0.5);
