--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -19,6 +19,7 @@ $pad-double: $_pad-base * 2;
 $wth-block: 100%;
 
 $hht-block: 100%;
+$hht-onehalf: $_pad-base*1.5;
 
 $bor-solid: $_pad-base * 0.0625 solid;
 
@@ -33,3 +34,10 @@ $z-2: 2;
 $z-3: 3;
 $z-5: 5;
 $z-8: 8;
+$z-13: 13;
+
+//Modal
+$wth-modal-mobile: calc(100vw - #{$_pad-base*3});
+$hht-modal: calc(100vh - #{$_pad-base*6});
+$hht-modal-inner: calc(100vh - #{$_pad-base*11});
+$wth-modal: $_pad-base*50;
