--- a/src/app/ui/elements/text/text.component.scss
+++ b/src/app/ui/elements/text/text.component.scss
@@ -40,6 +40,10 @@
     @include styles.font-medium;
   }
 
+  &--extra-large {
+    @include styles.font-extra-large;
+  }
+
   // weight
   &--regular {
     font-weight:  styles.$font-weight-regular;
