Locations services was added

--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -46,3 +46,6 @@ $wth-modal: $_pad-base*50;
 //Button icon
 $hht-btn-small: $hht-base*1.875;
 $wth-btn-small: $hht-base*1.875;
+
+// Floating card
+$hht-floating-card: $hht-base*20;
