--- a/src/app/ui/forms/sub-form-select/sub-form-select.component.html
+++ b/src/app/ui/forms/sub-form-select/sub-form-select.component.html
@@ -1,1 +1,30 @@
-<p>sub-form-select works!</p>
+<mr-dropdown
+  #dropdown
+  [icon]="icon"
+  [label]="label"
+  [placeholder]="placeholder"
+  [text]="optionSelectedLabel"
+  [tabid]="tabid"
+  [canDeleteText]="canDeleteText"
+  (deletedText)="resetOption()"
+>
+  <div *ngIf="showSearchable" class="sub-form-select__searchbox" header>
+    <input
+      class="sub-form-select__search"
+      type="search"
+      [placeholder]="'Buscar...'"
+      (input)="handleInput($event.target)"
+    >
+  </div>
+
+  <div class="sub-form-select__options">
+    <button
+      *ngFor="let option of optionsList; trackBy: trackIndex"
+      class="sub-form-select__option"
+      type="button"
+      (click)="handleClick($event, option?.id); dropdown.handleClose()"
+    >
+      <mr-text [type]="'line'" [size]="'small'" [text]="option?.label"></mr-text>
+    </button>
+  </div>
+</mr-dropdown>
