--- a/src/app/ui/_styles/_animations.scss
+++ b/src/app/ui/_styles/_animations.scss
@@ -1,6 +1,11 @@
 $bezier: all 0.15s cubic-bezier(0.17, 0.67, 0.8, 0.62);
 $ease: all .25s ease 0s;
 
+@mixin reverse {
+  transition: $ease;
+  transform: rotate(180deg);
+}
+
 @mixin scale-up-top {
   animation: scale-up-top 0.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
@@ -11,6 +16,20 @@ $ease: all .25s ease 0s;
   }
   100% {
     transform: scaleX(1);
+    transform-origin: 0% 0%;
+  }
+}
+
+@mixin scale-up-tl {
+  animation: scale-up-tl 0.1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+@keyframes scale-up-tl {
+  0% {
+    transform: scale(0.5);
+    transform-origin: 0% 0%;
+  }
+  100% {
+    transform: scale(1);
     transform-origin: 0% 0%;
   }
 }
