Noimage pipe was created

--- a/src/app/ui/elements/image/image.component.html
+++ b/src/app/ui/elements/image/image.component.html
@@ -1,1 +1,1 @@
-<img class="image image--{{rounded}}--{{radius}}" [src]="image" [alt]="alt ?? image" loading="lazy">
+<img class="image image--{{rounded}}--{{radius}}" [src]="image | noimage" [alt]="alt ?? image" loading="lazy">
