--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -11,7 +11,7 @@
       <figure class="home-content__logo">
         <mr-image [image]="'assets/img/oportunidades.png'" [alt]="'oportunidades'"></mr-image>
       </figure>
-      <mr-text [text]="'oportunidades'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
+      <mr-text [text]="'Oportunidades'" [size]="'extra-large'" [weight]="'bold'"></mr-text>
     </div>    
     <div class="home-content__channel home-content__channel--formacion">
       <figure class="home-content__logo">
