--- a/src/app/ui/blocks/home-content/home-content.component.scss
+++ b/src/app/ui/blocks/home-content/home-content.component.scss
@@ -73,6 +73,7 @@
     &__channels {
       display: flex;
       align-items: center;
+      justify-content: space-between;
     }
 
     &__description {
