--- a/src/app/ui/elements/item-menu/item-menu.component.html
+++ b/src/app/ui/elements/item-menu/item-menu.component.html
@@ -5,13 +5,12 @@
       [alt]="'logo-item'"
     ></mr-image>
   </figure>
-  <div>
+  <div class="item-menu__label">
     <mr-text
       [text]="item?.title"
       [weight]="'bold'"
       [size]="'medium'"
     ></mr-text>
-
     <mr-text
       [text]="item?.description"
       [size]="'small'"
