--- a/src/app/ui/_styles/_box-model.scss
+++ b/src/app/ui/_styles/_box-model.scss
@@ -11,6 +11,7 @@ $mrg-onehalf: $_pad-base * 1.5;
 $mrg-double: $_pad-base * 2;
 
 $pad-none: 0;
+$pad-quarter: $_pad-base * 0.25;
 $pad-half: $_pad-base * 0.5;
 $pad-base: $_pad-base; 
 $pad-onehalf: $_pad-base * 1.5;
