--- a/src/app/ui/elements/home-background/home-background.component.scss
+++ b/src/app/ui/elements/home-background/home-background.component.scss
@@ -7,14 +7,14 @@
   }
 
   &__image-top {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 50%;
   }
 
   &__image-bottom {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     width: 50%;
