--- a/src/app/ui/blocks/navbar/navbar.component.scss
+++ b/src/app/ui/blocks/navbar/navbar.component.scss
@@ -9,11 +9,19 @@
   &__content {
     background-color: styles.$color-primary-color;
     box-shadow: 0px 4px 15px 0px rgba(0,0,0,0.41);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: styles.$box-z-1;
   }
 
   &__button {
     @include styles.animation-scale-up-top;
     display: block;
     transition: .3s;
+  }
+
+  &__container {
+    position: relative;
   }
 }
