--- a/src/app/ui/blocks/aside-menu/aside-menu.component.scss
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.scss
@@ -7,23 +7,20 @@
 
   &__content {
     box-shadow: 1px 7px 20px 2px rgba(0,0,0,0.52);
-    background-color: styles.$color-primary-color-light;
+    background-color: styles.$color-bg-white;
     position: absolute;
     left: 0;
     top: 0;
-    min-height: calc(100vh - 64px);
+    min-height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
 
-  &__logo {
-    width: styles.func-toRem(17);
-    margin: 0 auto styles.$box-mrg-base;
-  }
 
   &__menu {
     display: grid;
     gap: styles.$box-pad-onehalf;
+    margin-top: styles.$box-mrg-base;
   }
 }
