--- a/src/app/ui/elements/item-menu/item-menu.component.html
+++ b/src/app/ui/elements/item-menu/item-menu.component.html
@@ -1,7 +1,7 @@
 <div class="item-menu">
   <figure class="item-menu__image">
     <mr-image
-      [image]="item?.image"
+      [image]="item?.image | noimage"
       [alt]="'logo-item'"
     ></mr-image>
   </figure>
