Responsive error in login was fixed

--- a/src/app/ui/layouts/layout-login/layout-login.component.scss
+++ b/src/app/ui/layouts/layout-login/layout-login.component.scss
@@ -2,7 +2,7 @@
 
 .layout-login {
   display: grid;
-  padding: styles.$box-pad-onehalf;
+  padding: styles.$box-pad-half;
   overflow: hidden;
   min-height: 100vh;
 }
