--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -27,7 +27,11 @@
     </div>
   </div>
   <div class="home-content__description">
-    <p>El programa Mujeres ROFÉ surgió en el marco de la estrategia para contrarrestar los efectos económicos y emocionales del COVID-19
-    en mujeres cabeza de hogar en Colombia.</p>
+    <mr-card>
+      <ng-container>
+        <p>El programa Mujeres ROFÉ surgió en el marco de la estrategia para contrarrestar los efectos económicos y emocionales del COVID-19
+          en mujeres cabeza de hogar en Colombia.</p>
+      </ng-container>
+    </mr-card>
   </div>
 </div>
