--- a/src/app/ui/elements/card/card.component.scss
+++ b/src/app/ui/elements/card/card.component.scss
@@ -4,4 +4,5 @@
   background-color: styles.$color-bg-white;
   padding: styles.$box-pad-onehalf;
   border-radius: styles.$box-rad-medium;
+  box-shadow: 0px 18px 32px rgba(9, 30, 66, 0.15);
 }
