--- a/src/app/ui/elements/home-background/home-background.component.scss
+++ b/src/app/ui/elements/home-background/home-background.component.scss
@@ -3,7 +3,6 @@
 .home-content {
   &__bg {
     position: relative;
-    min-height: calc(100vh - 64px);
   }
 
   &__image-top {
@@ -15,7 +14,7 @@
 
   &__image-bottom {
     position: fixed;
-    bottom: 0;
+    bottom: -5px;
     right: 0;
     width: 50%;
   }
