--- a/src/app/ui/elements/button/button.component.html
+++ b/src/app/ui/elements/button/button.component.html
@@ -1,5 +1,5 @@
 <button
-  class="button button--{{display}}"
+  class="button button--{{display}} button--{{type}}"
   type="button"
   [ngClass]="{'button--disabled': isDisabled}"
   [disabled]="isDisabled"
