--- a/src/app/ui/forms/form-user-login/form-user-login.component.html
+++ b/src/app/ui/forms/form-user-login/form-user-login.component.html
@@ -17,7 +17,7 @@
     <mr-sub-form-input 
       [type]="'input'"
       [label]="'Correo'"
-      [icon]="'fa-user'"
+      [icon]="'fas fa-user'"
       [placeholder]="'mujer@email.com'"
       [formControlName]="form.formControlNames.email"
     ></mr-sub-form-input>
@@ -25,7 +25,7 @@
     <mr-sub-form-input 
       [type]="'password'"
       [label]="'Contraseña'"
-      [icon]="'fa-lock'"
+      [icon]="'fas fa-lock'"
       [placeholder]="'**********'"
       [formControlName]="form.formControlNames.password"
     ></mr-sub-form-input>
