--- a/src/app/ui/forms/sub-form-input/sub-form-input.component.html
+++ b/src/app/ui/forms/sub-form-input/sub-form-input.component.html
@@ -3,7 +3,7 @@
     class="sub-form-input__label"
     [for]="uniqueId"
   >
-    <i *ngIf="!!icon" class="sub-form-input__icon fas {{icon}}"></i>
+    <i *ngIf="!!icon" class="sub-form-input__icon {{icon}}"></i>
     <div class="sub-form-input__text">
       <mr-text
         [type]="'line'"
