--- a/src/app/ui/forms/sub-form-textarea/sub-form-textarea.component.html
+++ b/src/app/ui/forms/sub-form-textarea/sub-form-textarea.component.html
@@ -1,1 +1,25 @@
-<p>sub-form-textarea works!</p>
+<div class="sub-form-textarea" [formGroup]="form.formGroup">
+  <label
+    class="sub-form-textarea__label"
+    [for]="uniqueId"
+  >
+    <div class="sub-form-textarea__text">
+      <mr-text
+        [type]="'line'"
+        [size]="'base'"
+        [text]="text"
+      ></mr-text>
+      <textarea
+        class="sub-form-textarea__textarea"
+        type="textarea"
+        [formControlName]="form.formControlNames.value"
+        [id]="uniqueId"
+        [placeholder]="placeholder ?? ''"
+        [rows]="rows"
+        (keypress)="handleKeypress($event.key)"
+        (focus)="handleFocus($event.target)"
+        (blur)="handleBlur()"
+      ></textarea>
+    </div>
+  </label>
+</div>
