Component multiselect was created

--- a/src/app/ui/forms/sub-form-input/sub-form-input.component.html
+++ b/src/app/ui/forms/sub-form-input/sub-form-input.component.html
@@ -11,8 +11,9 @@
         [weight]="'bold'"
         [text]="label"
       ></mr-text>
-      <input 
-        class="sub-form-input__input" 
+      <input
+        class="sub-form-input__input"
+        [id]="uniqueId"
         [formControlName]="form.formControlNames.value" 
         [type]="type"
         [placeholder]="placeholder ?? ''" 
