--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -32,13 +32,14 @@
         [placeholder]="'3116657131...'"
         [formControlName]="form.formControlNames.phoneNumber"
       ></mr-sub-form-input>
-  
-      <mr-sub-form-select 
+
+      <mr-sub-form-multi-select
         [label]="'Hobbies'"
-        [icon]="'fas fa-microphone'"
-        [placeholder]="'Cantar...'"
+        [placeholder]="'Selecciona tus hobbies'"
+        [icon]="'fas fa-skating'"
+        [options]="[{id: '1', label: 'cantar'}, {id: '2', label: 'follar'}]"
         [formControlName]="form.formControlNames.hobbies"
-      ></mr-sub-form-select>
+      ></mr-sub-form-multi-select>
   
       <mr-sub-form-input 
         [type]="'input'"
